--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -16,9 +16,9 @@
 
 .logo{
     position: absolute;
-    left: 2em;
-    width: 100px;
-    height: 40px;
+    left: 3em;
+    width: 250px;
+    height: 120px;
 }
 .logo img{
     width: 100%;
@@ -146,6 +146,7 @@
 }
 .register-btn:hover{
     transform: scale(1.1);
+    background-color: white;
 }
 
 
